# TelegramPredictions

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  bot.py  config.py  docker-compose.yml  env.example  log.txt  logger.py  main_bot.py  makefile  parser_predict.py  prediction.py  pyproject.toml  requirements.txt  run.sh  test_main_bot.py  time_utils.py
telegramBot/: pyvenv.cfg
telegramBot/Scripts/: activate  activate.bat
test/: test_main_bot.py
utils/: time_utils.py
